# GLSW

./: CMakeLists.txt  README.md
include/GLSW/: glsw.h
shaders/: defaultLight.fs  defaultLight.vs  flat.fs  flat.vs  identity.fs  identity.vs  pointLightDiffuse.fs  pointLightDiffuse.vs  shaded.fs  shaded.vs  textureModulate.fs  textureModulate.vs  texturePointLightDiffuse.fs  texturePointLightDiffuse.vs  textureRectReplace.fs  textureRectReplace.vs  textureReplace.fs  textureReplace.vs
src/: glsw.cxx
